--- a/client/src/Components/index.css
+++ b/client/src/Components/index.css
@@ -3,14 +3,14 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   background-color: #f1f1f1;
 }
 .navbar > div {
   display: flex;
   flex-direction: column;
 
-  border: 1px solid teal;
+  /* border: 1px solid teal; */
   border-radius: 50%;
   background-color: #fff;
   padding: 15px 35px;
@@ -28,4 +28,8 @@
 }
 .bottomNav>div{
  padding: 10px;
+}
+.link{
+  text-decoration: none;
+  color: black;
 }
